--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,10 +33,4 @@ jobs:
       uses: docker/setup-buildx-action@v1
 
     - name: Build the Docker image
-      run: docker-compose -f docker-compose.yml build
-
-    - name: Run tests
-      run: docker-compose -f docker-compose.yml up --exit-code-from sso_service
-
-    - name: Clean up
-      run: docker-compose -f docker-compose.yml down
+      run: docker-compose -f sso/config/docker-compose.yml services
