--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,4 +33,4 @@ jobs:
       uses: docker/setup-buildx-action@v1
 
     - name: Build the Docker image
-      run: docker-compose -f sso/config/docker-compose.yml services
+      run: docker-compose -f sso/config/docker-compose.yml build
